Remove Google login functionality

--- a/vercel.json
+++ b/vercel.json
@@ -3,16 +3,5 @@
   "devCommand": "npm run dev",
   "installCommand": "npm install",
   "framework": "nuxtjs",
-  "outputDirectory": ".output/public",
-  "headers": [
-    {
-      "source": "/(.*)",
-      "headers": [
-        {
-          "key": "Content-Security-Policy",
-          "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://js.stripe.com https://m.stripe.com https://accounts.google.com https://apis.google.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com data:; img-src 'self' data: https:; connect-src 'self' https://api.stripe.com https://m.stripe.com https://merchant-ui-api.stripe.com https://*.googleapis.com https://*.firebaseio.com wss://*.firebaseio.com https://accounts.google.com; frame-src https://js.stripe.com https://hooks.stripe.com https://accounts.google.com; worker-src 'self' blob:;"
-        }
-      ]
-    }
-  ]
+  "outputDirectory": ".output/public"
 }
