--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,7 @@
   "devCommand": "npm run dev",
   "installCommand": "npm install",
   "framework": "nuxtjs",
-  "outputDirectory": ".output/public"
+  "outputDirectory": ".output/public",
+  "cleanUrls": true,
+  "trailingSlash": false
 }
