--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches: [main]
 
+permissions:
+  contents: read
+  statuses: write
+
 jobs:
   # まずビルドが成功することを確認
   build:
@@ -69,14 +73,6 @@ jobs:
           echo "url=$URL" >> $GITHUB_OUTPUT
           echo "Deployed to: $URL"
 
-      - name: Comment on Commit
-        uses: actions/github-script@v7
+      - name: Output Deploy URL
         if: success()
-        with:
-          script: |
-            github.rest.repos.createCommitComment({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              commit_sha: context.sha,
-              body: `🚀 Production deployed: ${{ steps.deploy.outputs.url }}`
-            })
+        run: echo "🚀 Production deployed to ${{ steps.deploy.outputs.url }}"
