--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches: [staging]
 
+permissions:
+  contents: read
+  statuses: write
+
 jobs:
   deploy:
     name: Deploy to Vercel (Staging)
@@ -40,14 +44,6 @@ jobs:
           echo "url=$URL" >> $GITHUB_OUTPUT
           echo "Deployed to: $URL"
 
-      - name: Comment on Commit
-        uses: actions/github-script@v7
+      - name: Output Deploy URL
         if: success()
-        with:
-          script: |
-            github.rest.repos.createCommitComment({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              commit_sha: context.sha,
-              body: `✅ Staging deployed: ${{ steps.deploy.outputs.url }}`
-            })
+        run: echo "✅ Staging deployed to ${{ steps.deploy.outputs.url }}"
