--- a/.github/workflows/pr-preview.yml
+++ b/.github/workflows/pr-preview.yml
@@ -4,6 +4,10 @@ on:
   pull_request:
     branches: [main, staging]
 
+permissions:
+  contents: read
+  pull-requests: write
+
 jobs:
   preview:
     name: Deploy Preview
